# ov-panel

./: .env.example  README.md  install.sh  installer.py  main.py  package-lock.json  pyproject.toml
.github/workflows/: build-frontend.yml  build.yml  lint.yml
backend/: app.py  config.py
backend/alembic/: env.py
backend/alembic/versions/: 076bf2e03771_added_uuid_for_users.py  119c8a667c3f_initial_migration_first_version_of_db.py  494ff940dc52_update_node_table.py  5d05b8afd950_added_admins_table.py  89950e18b0c5_added_api_key_for_nodes.py  9710b4923333_added_settings_table.py  ebca6422ef3a_added_nodes.py  health_sync_fields_add_health_and_sync.py
backend/auth/: __init__.py  auth.py
backend/db/: crud.py  models.py
backend/node/: health_check.py  requests.py  scheduler.py  sync.py  task.py
backend/operations/: core_setting.py  daily_checks.py  server_info.py  user_management.py
backend/routers/: __init__.py  admins.py  node.py  setting.py  sub.py  users.py
backend/schema/: _input.py  output.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  i18n.js  index.css  main.jsx
frontend/src/components/: AddAdminModal.jsx  AddNodeModal.jsx  AddUserModal.jsx  AdminTable.jsx  DownloadFromNodeModal.jsx  EditAdminModal.jsx  EditNodeModal.jsx  EditUserModal.jsx  LanguageSwitcher.jsx  MobileNav.jsx  NodeTable.jsx  SelectNodeForDownloadModal.jsx  Sidebar.jsx  UserStatCard.jsx  UserTable.css  UserTable.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lang/: en.json  (+3 more)
frontend/templates/: subscription.html
(+5 files in other folders)
