[project]
name = "ov-panel"
version = "1.0.7"
description = "An OpenVPN client management panel on the server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "requests",
    "pydantic_settings",
    "alembic==1.15.1",
    "SQLAlchemy==2.0",
    "python-dotenv==1.1.0",
    "pexpect",
    "psutil",
    "passlib",
    "pyjwt",
    "bcrypt==4.0.1",
    "python-jose[cryptography]",
    "python-multipart",
    "apscheduler",
    "colorama",
]
